--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Baya Bank</title>
-    <img src="/images/bank.webp" alt="BayaBank">
-<!--    <link rel="icon" type="image/svg+xml" href="/public/Quotes-Mark-Symbol-PNG-Image.webp" />-->
+    <link rel="icon" href="/images/bank.webp" type="image/webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
